fix(module): remove min-height, add same spacing as module_20_quote

--- a/src/templates/module_15_statement/styles.less
+++ b/src/templates/module_15_statement/styles.less
@@ -2,7 +2,6 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	min-height: 100vh;
 	padding: @s2-moduleGap-s-2 @s2-moduleGap-s-1;
 
 	background: @s2-verydarkblue;
@@ -28,7 +27,7 @@
 	}
 
 	@media @s2-mq-window-tablet {
-		padding: @s2-moduleGap-m-2;
+		padding: @s2-moduleGap-m-3 @s2-moduleGap-m-2;
 
 		.copy,
 		.quote {
@@ -43,7 +42,7 @@
 	}
 
 	@media @s2-mq-window-desktop {
-		padding: @s2-moduleGap-l-2;
+		padding: @s2-moduleGap-l-3 @s2-moduleGap-l-2;
 
 		.copy,
 		.quote {
